# storage/api-docs/api-docs.json
@@ -209,6 +209,45 @@
                 }
             }
         },
+        "/my-sessions": {
+            "get": {
+                "summary": "Get user sessions list",
+                "description": "",
+                "operationId": "getUserSession",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "tutor_id",
+                        "in": "query",
+                        "description": "tutor id",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "student_id",
+                        "in": "query",
+                        "description": "student id",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User's List"
+                    },
+                    "422": {
+                        "description": "Un Processable Entry"
+                    }
+                }
+            }
+        },
         "/get-profile": {
             "get": {
                 "summary": "Get user profile",
